# prospr

./: .clang-format.yaml  .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  CMakeLists.txt  Makefile  README.md  input.txt  manage.sh  prospr_interpreter.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_visualization.py  update.sh
.git-config/hooks/: pre-commit
.githooks/: compress_files.sh  zip_core.sh
.github/hooks/: pre-commit
.github/workflows/: build_deploy.yml  build_package.yml  matrix_includes.BAK  matrix_includes.BAK2  matrix_includes.json  syntax_check.yml
docs/: gen_logo.py  requirements.txt
docs/source/: api.rst  conf.py  heterogeneous_setup.rst  index.rst  installation.rst  license.rst  manpage.rst  manpages.rst  quickstart.rst
docs/source/_static/: prospr_logo.xcf
prospr/: __init__.py  _version.py  datasets.py  experimental.py  gen_data.py  helpers.py  test_core_locally.sh  visualize.py
prospr/core/: __init__.py  build.py  core_module.cpp  setup.py  swig.sh
prospr/core/Protein/: Protein.cpp  Protein.h  Protein.i  Protein.py  __init__.py  setup.py
prospr/core/depth_first/: depth_first.hpp  depth_first.i
prospr/core/depth_first_bnb/: depth_first_bnb.hpp  depth_first_bnb.i
prospr/core/exact/: __init__.py
prospr/core/exact/depth_first/: depth_first.cpp  depth_first.h  depth_first.i  setup.py
prospr/core/exact/depth_first_bnb/: __init__.py  depth_first_bnb.cpp  depth_first_bnb.h  depth_first_bnb.i  setup.py
prospr/core/protein/: __init__.py  protein.cpp  protein.i  setup.py
prospr/core/src/: a_star.cpp  a_star.hpp  amino_acid.cpp  amino_acid.hpp  beam_search.cpp  beam_search.hpp  breadth_first.cpp  breadth_first.hpp  conformation.cpp  conformation.hpp  depth_first.cpp  depth_first.hpp  depth_first_bnb.cpp  depth_first_bnb.hpp  dijkstra.cpp  dijkstra.hpp  dijkstra_bnb.cpp  dijkstra_bnb.hpp  minwalk.cpp  minwalk.hpp  protein.cpp  protein.hpp  utils.cpp  utils.hpp
prospr/core/tests/: run_tests.sh  test_algorithms  test_algorithms.cpp  test_amino_acid.cpp  test_protein  test_protein.cpp
prospr/data/: replace_unfoldable.py
prospr/data/vanEck1000/: HP10.csv  HP100.csv  HP15.csv  HP20.csv  HP25.csv  HP30.csv  HP35.csv  HP40.csv  HP45.csv  HP50.csv  HP55.csv  HP60.csv  HP65.csv  HP70.csv  HP75.csv  HP80.csv  HP85.csv  HP90.csv  HP95.csv
prospr/data/vanEck250/: HP10.csv  HP100.csv  HP15.csv  HP20.csv  HP25.csv  HP30.csv  HP35.csv  HP40.csv  HP45.csv  HP50.csv  HP55.csv  HP60.csv  HP65.csv  HP70.csv  HP75.csv  HP80.csv  HP85.csv  HP90.csv  HP95.csv
prospr/data/vanEck_hratio/: HP10_r0.1.csv  HP10_r0.2.csv  HP10_r0.3.csv  HP10_r0.4.csv  HP10_r0.5.csv  HP10_r0.6.csv  HP10_r0.7.csv  HP10_r0.8.csv  HP10_r0.9.csv  HP10_r1.0.csv  HP15_r0.1.csv  HP15_r0.2.csv  HP15_r0.3.csv  HP15_r0.4.csv  HP15_r0.5.csv  HP15_r0.6.csv  HP15_r0.7.csv  HP15_r0.8.csv  HP15_r0.9.csv  HP15_r1.0.csv  HP20_r0.1.csv  HP20_r0.2.csv  HP20_r0.3.csv  HP20_r0.4.csv  HP20_r0.5.csv  HP20_r0.6.csv  HP20_r0.7.csv  HP20_r0.8.csv  HP20_r0.9.csv  HP20_r1.0.csv  HP25_r0.1.csv  HP25_r0.2.csv  HP25_r0.3.csv  HP25_r0.4.csv  HP25_r0.5.csv  HP25_r0.6.csv  HP25_r0.7.csv  HP25_r0.8.csv  HP25_r0.9.csv  HP25_r1.0.csv  (+10 more)
prospr/data/vanEck_hratio/old_data/: HP30_r0.2.csv  HP30_r0.3.csv  HP30_r0.4.csv  HP30_r0.8.csv  HP30_r1.0.csv
prospr/datasets/uniform/vanEck1000/: HP_10  HP_100  HP_15  HP_20  HP_25  HP_30  HP_35  HP_40  HP_45  HP_50  HP_55  HP_60  HP_65  HP_70  HP_75  HP_80  HP_85  HP_90  HP_95
prospr/datasets/uniform/vanEck250/: HP_10  HP_100  HP_15  HP_20  HP_25  HP_30  HP_35  HP_40  HP_45  HP_50  HP_55  HP_60  HP_65  HP_70  HP_75  HP_80  HP_85  HP_90  HP_95
prospr/exact/: depth_first.py
prospr/tests/: context.py
tests/core/: test_beam_search.py  test_depth_first.py  test_depth_first_bnb.py  test_depth_first_symmetry.py  test_dijkstra.py  test_dijkstra_bnb.py  test_protein.py
tests/data/: test_datasets.py
tests/helpers/: test_helpers.py
tests/visualize/: test_visualization.py
travis/: build-wheels.sh
