[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11~=2.6.1",
]
build-backend = "setuptools.build_meta"

[project]
name = "prospr"
authors = [
    {name = "okkevaneck", email = "okke.van.eck@gmail.com"},
]
dynamic = ["version"]
description = "A toolbox for protein folding with Python."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = [
    "prospr",
    "protein",
    "structure",
    "prediction",
    "toolbox",
    "python",
    "c++",
    "extension",
    "pypi",
    "package",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
homepage = "https://github.com/okkevaneck/prospr"
documentation = "https://prospr.readthedocs.io"
repository = "https://github.com/okkevaneck/prospr"

[tool.setuptools]
packages = ["prospr"]
package-dir = {"prospr" = "prospr"}
zip-safe = false
platforms = ["Linux", "macOS", "Windows"]

[tool.setuptools.package-data]
prospr = ["data/*/*.csv", "core/src/*"]

[tool.setuptools.dynamic]
version = {attr = "prospr.__version__"}

[tool.black]
line-length = 79

[tool.pytest]
minversion = 7.1

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
