[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "pybind11>=2.12",
]
build-backend = "setuptools.build_meta"

[project]
name = "prospr"
authors = [
    {name = "okkevaneck", email = "okke.van.eck@gmail.com"},
]
dynamic = ["version"]
description = "A toolbox for protein folding with Python."
readme = "README.md"
requires-python = ">=3.9"
license = "LGPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
keywords = [
    "prospr",
    "protein",
    "structure",
    "prediction",
    "toolbox",
    "python",
    "c++",
    "extension",
    "pypi",
    "package",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "matplotlib>=3.9.4",
    "pandas>=2.2.3",
    "seaborn>=0.12.2",
]

[project.urls]
homepage = "https://github.com/okkevaneck/prospr"
documentation = "https://prospr.readthedocs.io"
repository = "https://github.com/okkevaneck/prospr"

[tool.setuptools]
packages = {find = {include = ["prospr", "prospr.*"]}}
package-dir = {"prospr" = "prospr"}
zip-safe = false
platforms = ["Linux", "macOS", "Windows"]

[tool.setuptools.package-data]
prospr = ["data/*/*.csv", "core/src/*"]

[tool.setuptools.dynamic]
version = {attr = "prospr._version.__version__"}

[tool.black]
line-length = 79

[tool.pytest]
minversion = 7.1

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
