[metadata]
name = prospr
version = attr: prospr.__version__
author = okkevaneck
description = A toolbox for protein folding with Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/okkevaneck/prospr
license = LGPLv3
license_files = LICENSE
platforms = any
keywords =
    prospr
    protein
    structure
    prediction
    toolbox
    python
    c++
    extension
    pypi
    package
classifiers=
    Programming Language :: Python :: 3
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent
    Topic :: Education
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
zip_safe = False
include_package_data = True
packages = prospr
python_requires = >=3.9
install_requires =
    matplotlib
    seaborn
    numpy
    pandas

[options.package_data]
prospr = data/*/*.csv
hello = *.msg

[options.extras_require]
test = pytest

;ext_modules = ext_modules
;cmdclass = {"build_ext": build_ext}
